--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Inter:wght@100..900&family=Outfit:wght@100..900&family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Inter:wght@100..900&family=Outfit:wght@100..900&family=Pacifico&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 body,
@@ -73,7 +73,8 @@ section {
   font-size: 6vh;
 }
 
-section .grid, section .grid1 {
+section .grid,
+section .grid1 {
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -84,10 +85,15 @@ section .grid, section .grid1 {
 }
 
 section .card {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  
   width: 100%;
   max-width: 300px;
   border: 1px solid #ddd;
@@ -98,7 +104,6 @@ section .card {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in;
   text-align: center;
-  height: 100%;
 }
 
 section .card:hover {
@@ -148,10 +153,13 @@ section .card-content {
 
 /* Responsive Styles */
 @media (max-width: 1024px) {
-  .fstgrid, .grid, .grid1 {
+  .fstgrid,
+  .grid,
+  .grid1 {
     grid-template-columns: 1fr;
   }
-  section .grid, section .grid1 {
+  section .grid,
+  section .grid1 {
     padding: 3vh 10vh;
   }
 }
@@ -171,11 +179,14 @@ section .card-content {
     padding: 4vh;
   }
 
-  h1, .h1, .sech1 {
+  h1,
+  .h1,
+  .sech1 {
     font-size: 4vh;
   }
 
-  section .grid, section .grid1 {
+  section .grid,
+  section .grid1 {
     padding: 3vh 5vh;
   }
 
@@ -209,11 +220,14 @@ section .card-content {
     padding: 2vh;
   }
 
-  h1, .h1, .sech1 {
+  h1,
+  .h1,
+  .sech1 {
     font-size: 3vh;
   }
 
-  section .grid, section .grid1 {
+  section .grid,
+  section .grid1 {
     padding: 2vh;
   }
 
@@ -236,6 +250,10 @@ section .card-content {
   }
 }
 
-h2{
-    text-align: center;
+h2 {
+  text-align: center;
 }
+
+
+.dis{justify-content: space-between;
+gap: 2vh;}
